--- a/index.html
+++ b/index.html
@@ -1,23 +1,166 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="zh-CN">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>在线专栏 - 登录代理</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>在线专栏 - 登录代理</title>
 </head>
 
 <body>
-  <div id="app"></div>
-  <div id="particles-js"></div>
-  <script src="particles.js"></script>
-  <script type="module" src="/src/main.ts"></script>
-  <script>
-    particlesJS.load('particles-js', '/particles.json', function () {
-      console.log('callback - particles.js config loaded');
-    });
-  </script>
+    <div id="particles-js"></div>
+    <main>
+        <h1>登录</h1>
+        <input type="text" id="userName" placeholder="用户名" autocomplete="username">
+        <input placeholder="密码" type="password" id="password" autocomplete="current-password">
+        <button onclick="login()" id="loginButton">登录</button>
+    </main>
 </body>
+<style>
+    /* latin */
+    @font-face {
+        font-family: "Inter";
+        font-style: normal;
+        font-weight: 400;
+        font-display: swap;
+        src: url(https://fonts.gstatic.cn/s/inter/v13/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2) format("woff2");
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+            U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+            U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    }
+
+    :root {
+        font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+            Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+        font-size: 16px;
+    }
+
+    body {
+        height: 100vh;
+        margin: 0 auto;
+        padding: 0;
+    }
+
+    h1 {
+        margin-top: 0;
+    }
+
+    body,
+    main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    main {
+        padding: 3em;
+        border-radius: 50px;
+        background: #ffffff;
+        box-shadow: 35px 35px 70px #d9d9d9,
+            -35px -35px 70px #ffffff;
+        background-color: white;
+        z-index: 1;
+    }
+
+    input {
+        margin: .4em;
+        line-height: 30px;
+        padding: .5em .8em;
+        border: 2px solid transparent;
+        border-radius: 10px;
+        outline: none;
+        color: #0d0c22;
+        transition: .3s ease;
+        border-color: #76abff;
+        font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+            Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    }
+
+    .input:focus,
+    input:hover {
+        outline: none;
+        border-color: #0062ff;
+        background-color: #fff;
+        box-shadow: 0 0 0 3px #0750c742;
+    }
+
+    input:focus {
+        outline: none;
+    }
+
+    button {
+        border: 0;
+        margin-top: .5em;
+        padding: .8em 2em;
+        border-radius: .8em;
+        color: white;
+        background: #0062ff;
+        transition: .3s ease;
+    }
+
+    button:hover {
+        background: #0057e4;
+    }
+
+    button:active {
+        box-shadow: 0 0 0 3px #0750c742;
+    }
+
+    #particles-js {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+    }
+</style>
+<script src="particles.js"></script>
+<script>
+    particlesJS.load('particles-js', '/particles.json', function () {
+        console.log('callback - particles.js config loaded');
+    });
+
+    function login() {
+        try {
+            const userName = document.getElementById('userName').value;
+            const password = document.getElementById('password').value;
+            if (userName == null || userName == '')
+                throw Error('用户名不应为空');
+            if (password == null || password == '')
+                throw Error('密码不应为空');
+
+            var httpRequest = new XMLHttpRequest();
+            httpRequest.open("POST", "http://sxz.api6.zykj.org/api/TokenAuth/Login", true);
+            httpRequest.setRequestHeader("Content-Type", "application/json");
+            httpRequest.send(JSON.stringify({
+                password,
+                userName,
+                clientType: 1
+            }));
+            httpRequest.onreadystatechange = () => {
+                try {
+                    console.log(httpRequest.readyState, httpRequest.status == 200);
+                    if (httpRequest.readyState == 4 && httpRequest.status == 200) {
+                        var response = JSON.parse(httpRequest.responseText);
+                        console.log(response);
+                        if (response.success == true)
+                            window.location.href = `http://sxz.school.zykj.org/navPage.html?apiHost=http://sxz.api6.zykj.org&apiToken=${response.result.accessToken}#/list`
+                        else
+                            throw Error(`${response.error.code}: ${response.error.message}`)
+                    }
+                    else {
+                        if (httpRequest.readyState == 4)
+                            throw Error(httpRequest.statusText);
+                    }
+                } catch (error) {
+                    alert(error.message);
+                }
+            }
+
+        } catch (error) {
+            alert(error.message);
+        }
+    }
+</script>
 
 </html>
