--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <script src="particles.js"></script>
 <script>
     if (document.location.protocol == "https:")
-        document.location.protocol == "http:";
+        document.location.protocol = "http:";
     particlesJS.load('particles-js', '/particles.json', function () {
         console.log('callback - particles.js config loaded');
     });
